--- a/spa/css/spa.css
+++ b/spa/css/spa.css
@@ -22,3 +22,50 @@ ol, ul, dl {
 
 
 /* End reset */
+
+/* Begin Standart Selectors */
+body {
+    font: 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+    color: #444;
+    background-color: #888;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link, a:visited { color: inherit; }
+a:hover { text-decoration: underline: }
+
+strong {
+    font-weight: 800;
+    color: #000;
+}
+
+
+/* End Standard Selectors */
+
+/* Begin Namespace selectors */
+#spa{
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    right: 8px;
+    bottom: 8px;
+
+    min-height: 500px;
+    min-width: 500px;
+    overflow: hidden;
+
+    background-color: #fff;
+    border-radius: 0 8px 0 8px;
+}
+
+.spa-x-select {}
+.spa-x-clearfloat {
+    height: 0 !important;
+    float: none !important;
+    visibility: hidden !important;
+    clear: both !important;
+}
+
